# django-jet-2

./: .gitignore  .travis.yml  CONTRIBUTING.rst  README.rst  package-lock.json  package.json  pyproject.toml
.github/workflows/: tests.yml
docs/: dashboard_custom_module.rst
jet/: filters.py  forms.py  models.py  ordered_set.py  urls.py  utils.py  views.py
jet/dashboard/: dashboard.py  forms.py  models.py  modules.py  settings.py  urls.py  views.py
jet/dashboard/dashboard_modules/: google_analytics.py  google_analytics_views.py  yandex_metrika.py
jet/dashboard/templatetags/: jet_dashboard_tags.py
jet/management/commands/: jet_custom_apps_example.py  jet_side_menu_items_example.py
jet/migrations/: 0001_initial.py  0002_delete_userdashboardmodule.py
jet/static/jet/css/: _messages.scss
jet/templates/admin/: base.html  popup_response.html
jet/templatetags/: jet_tags.py
jet/tests/: admin.py  settings.py  test_filters.py  test_ordered_set.py  test_tags.py  test_utils.py  urls.py
