[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-jet-2"
authors = [
    { name = "Denis Kildishev", email = "support@jet.geex-arts.com" },
    { name = "Khaled Emad", email = "khaledemad656@gmail.com" },
]
maintainers = [
    { name = "Khaled Emad", email = "khaledemad656@gmail.com" }
]
description = "Modern template for Django admin interface with improved functionality"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["Django", "Django Admin", "jet"]
license = { text = "AGPLv3" }
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Framework :: Django',
    'License :: Free for non-commercial use',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Environment :: Web Environment',
    'Topic :: Software Development',
    'Topic :: Software Development :: User Interfaces',
]
dynamic = ["version"]
dependencies = [
    "Django>=4.2",
    "django-admin-rangefilter>=0.13.0",
]

[project.optional-dependencies]
dev = ["ruff"]
feed = ["feedparser"]

[tool.setuptools.dynamic]
version = { attr = "jet.VERSION" }

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # PEP8 errors
    "W",    # PEP8 warnings
    "F",    # PyFlakes
    "I",    # isort
    "C",    # mccabe
    "T201", # flake8-print
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = false
